// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package Parse alternative 1`] = `
Object {
  "author": "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  "bin": Object {
    "name": "./path/to/program/index.js",
    "shortname": "./path/to/program/index.js",
  },
  "browser": "lib/index.js",
  "bugs": "https://github.com/owner/project/issues",
  "bundledDependencies": Array [
    "render-blender",
    "super-streams",
  ],
  "config": Object {
    "port": "8080",
  },
  "contributors": Array [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "cpu": Array [
    "!arm",
    "ia32",
    "x64",
  ],
  "dependencies": Object {
    "asd": "http://asdf.com/asdf.tar.gz",
    "bar": ">=1.0.2 <2.1.2",
    "baz": ">1.0.2 <=2.3.4",
    "boo": "2.0.1",
    "dyl": "file:../dyl",
    "elf": "~1.2.3",
    "foo": "1.0.0 - 2.9999.9999",
    "lat": "latest",
    "qux": "<1.0.0 || >=2.3.1 <2.4.5 || >=2.5.2 <3.0.0",
    "thr": "3.3.x",
    "til": "~1.2",
    "two": "2.x",
  },
  "description": "package description",
  "devDependencies": Object {
    "super-script": "~1.6.3",
  },
  "directories": Object {
    "bin": "local/binaries",
    "jars": "java",
    "lib": "src/lib",
  },
  "engines": Object {
    "node": ">=0.10.3 <15",
  },
  "exports": Object {
    "./feature": Object {
      "default": "./feature.js",
      "node": "./feature-node.js",
    },
    "default": "./feature.mjs",
    "node": Object {
      "import": "./feature-node.mjs",
      "require": "./feature-node.cjs",
    },
  },
  "files": Array [
    "__tests__/*.*",
  ],
  "funding": Array [
    Object {
      "type": "individual",
      "url": "http://example.com/donate",
    },
    "http://example.com/donateAlso",
    Object {
      "type": "patreon",
      "url": "https://www.patreon.com/my-account",
    },
  ],
  "homepage": "https://github.com/owner/project#readme",
  "imports": Object {
    "#dep": Object {
      "default": "./dep-polyfill.js",
      "node": "dep-node-native",
    },
    "#internal/*": "./src/internal/*.js",
  },
  "keywords": Array [
    "jest",
    "test",
  ],
  "license": "SEE LICENSE IN LICENSE_FILE",
  "maintainers": Array [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "man": Array [
    "./man/bar.1",
    "./man/foo.1",
  ],
  "name": "@scope/package",
  "optionalDependencies": Object {
    "some-pkg": "1.x",
  },
  "os": Array [
    "!win32",
    "darwin",
    "linux",
  ],
  "peerDependencies": Object {
    "soy-milk": "1.2",
    "tea": "2.x",
  },
  "peerDependenciesMeta": Object {
    "soy-milk": Object {
      "optional": true,
    },
  },
  "private": true,
  "publishConfig": Object {
    "allow-same-version": true,
  },
  "repository": "gitlab:user/repo",
  "scripts": Object {
    "compress": "{{ run command to compress files }}",
    "prepare": "command -o lib/ -c src/index.js",
  },
  "type": "module",
  "types": "lib/index.d.ts",
  "version": "1.0.1",
  "workspaces": Array [
    "./packages/*",
  ],
}
`;

exports[`Package Parse base 1`] = `
Object {
  "author": "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  "bin": Object {
    "test": "lib/index.js",
  },
  "bugs": Object {
    "email": "project@hostname.com",
    "url": "https://github.com/owner/project/issues",
  },
  "bundledDependencies": Array [
    "render-blender",
    "super-streams",
  ],
  "config": Object {
    "port": "8080",
  },
  "contributors": Array [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "cpu": Array [
    "!arm",
    "ia32",
    "x64",
  ],
  "dependencies": Object {
    "asd": "http://asdf.com/asdf.tar.gz",
    "bar": ">=1.0.2 <2.1.2",
    "baz": ">1.0.2 <=2.3.4",
    "boo": "2.0.1",
    "dyl": "file:../dyl",
    "elf": "~1.2.3",
    "foo": "1.0.0 - 2.9999.9999",
    "lat": "latest",
    "qux": "<1.0.0 || >=2.3.1 <2.4.5 || >=2.5.2 <3.0.0",
    "thr": "3.3.x",
    "til": "~1.2",
    "two": "2.x",
  },
  "description": "package description",
  "devDependencies": Object {
    "super-script": "~1.6.3",
  },
  "directories": Object {
    "bin": "local/binaries",
    "jars": "java",
    "lib": "src/lib",
  },
  "engines": Object {
    "node": ">=0.10.3 <15",
  },
  "exports": "./lib/index.js",
  "files": Array [
    "__tests__/*.*",
  ],
  "funding": Array [
    Object {
      "type": "individual",
      "url": "http://example.com/donate",
    },
  ],
  "homepage": "https://github.com/owner/project#readme",
  "keywords": Array [
    "jest",
    "test",
  ],
  "license": "(MIT OR Apache-2.0)",
  "maintainers": Array [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "man": Array [
    "./man/doc.1",
  ],
  "name": "test",
  "optionalDependencies": Object {
    "some-pkg": "1.x",
  },
  "os": Array [
    "!win32",
    "darwin",
    "linux",
  ],
  "peerDependencies": Object {
    "soy-milk": "1.2",
    "tea": "2.x",
  },
  "peerDependenciesMeta": Object {
    "soy-milk": Object {
      "optional": true,
    },
  },
  "publishConfig": Object {
    "allow-same-version": true,
  },
  "repository": Object {
    "directory": "packages/react-dom",
    "type": "git",
    "url": "https://github.com/facebook/react.git",
  },
  "scripts": Object {
    "compress": "{{ run command to compress files }}",
    "prepare": "command -o lib/ -c src/index.js",
  },
  "type": "module",
  "types": "lib/index.d.ts",
  "version": "1.0.1",
  "workspaces": Array [
    "./packages/*",
  ],
}
`;
